cmake_minimum_required (VERSION 3.0) #最低要求的CMake版本
#project(CStart) # 项目名称

SET(INCLUDE ${CMAKE_SOURCE_DIR}/include)
set(CMAKE_UNITY_BUILD ON)

#FILE(GLOB SOURCE "*.cpp")
FILE(GLOB SOURCE "*.c")
#LIST(REMOVE_ITEM SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp)
LIST(REMOVE_ITEM SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/testmain.c)

ADD_COMPILE_OPTIONS("-g")
ADD_COMPILE_OPTIONS("-Wall")
ADD_LIBRARY(hello ${SOURCE})

TARGET_INCLUDE_DIRECTORIES(hello PUBLIC "${INCLUDE}")
#ADD_EXECUTABLE(main ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp)
ADD_EXECUTABLE(main ${CMAKE_CURRENT_SOURCE_DIR}/testmain.c)
TARGET_LINK_LIBRARIES(main hello)
